--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@
 /Lab4/obj
 /Lab4/appsettings.Development.json
 /Lab4/appsettings.json
+/Lab5/obj
+/Lab5/bin/Debug/net6.0
+/Lab5/appsettings.Development.json
+/Lab5/appsettings.json
